# ml_lib

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
cpp/: CMakeLists.txt  LICENSE
cpp/apps/: CMakeLists.txt
cpp/apps/cifar_networks/: CMakeLists.txt  catboost_nn.cpp  catboost_nn.h  catboost_params.json  catboost_params_final.json  catboost_params_gpu.json  catboost_params_init.json  catboost_params_lenet.json  common.cpp  common.h  common_em.h  lenet.cpp  lenet_catboost.cpp  lenet_em.cpp  lenet_save_restore.cpp  mobile_net_v2.cpp  mobile_net_v2_catboost.cpp  mobile_net_v2_save_restore.cpp  resnet.cpp  resnet_catboost.cpp  resnet_em.cpp  resnet_save_restore.cpp  vgg.cpp  vgg_catboost.cpp  vgg_em.cpp
cpp/apps/cifar_nn_test_app/: CMakeLists.txt  main.cpp
cpp/apps/cifar_read_app/: CMakeLists.txt  main.cpp
cpp/apps/devices_info/: CMakeLists.txt  main.cpp
cpp/apps/experiments/: CMakeLists.txt  catboost_nn.cpp  catboost_nn.h  catboost_params.json  catboost_params_final.json  catboost_params_gpu.json  catboost_params_init.json  check_cuda_libtorch.cpp  common.cpp  common.h  common_em.h  default_train.cpp  default_train_em.cpp  lenet.cpp  lenet_catboost.cpp  lenet_em.cpp  lenet_em_exact_classifier.cpp  lenet_save_restore.cpp  mobile_net_v2.cpp  mobile_net_v2_catboost.cpp  mobile_net_v2_em.cpp  mobile_net_v2_save_restore.cpp  resnet.cpp  resnet_catboost.cpp  resnet_em.cpp  resnet_save_restore.cpp  svhn_read.cpp  test_linear_trees.cpp  train_cnn_linear_trees.cpp  train_default.cpp  train_default_em.cpp  train_with_catboost.cpp  vgg.cpp  vgg_catboost.cpp  vgg_em.cpp  vgg_save_restore.cpp
cpp/apps/mkl_example/: CMakeLists.txt  main.cpp
cpp/apps/test_app/: CMakeLists.txt  main.cpp
cpp/apps/train_catboost/: CMakeLists.txt  train_catboost.cpp
cpp/apps/train_ot/: CMakeLists.txt  main.cpp
cpp/apps/tree_nn/: CMakeLists.txt  lenet.cpp
cpp/core/: CMakeLists.txt  batch.h  batch_optimizer.h  buffer.h  cache.h  context.cpp  context.h  func.h  index_transformation.h  matrix.cpp  matrix.h  multi_dim_array.h  object.h  optimizer.h  scalar.h  torch_helpers.h  trans.h  vec.cpp  vec.h  vec_factory.cpp  vec_factory.h
cpp/core/funcs/: linear.cpp  linear.h  lq.cpp  lq.h
cpp/core/kernels/: fill.cu  fill.cuh
cpp/core/mx_tools/: ops.cpp
cpp/core/optimizers/: adam.cpp  gradient_descent.cpp  gradient_descent.h  momentum_grad.cpp  momentum_grad.h  stochastic_grad.h
cpp/core/src/: array_vec.cpp  array_vec.h  context.cpp  cuda_vec.h  fixed_size_vec.cpp  fixed_size_vec.h  func.cpp  matrix.cpp  non_owning_vec.cpp  non_owning_vec.h  placeholder_vec.cpp  placeholder_vec.h  subvec.h  trans.cpp  vec.cpp  vec_factory.cpp  vec_impls.cpp  vec_impls.h  vec_ops.h  vec_ref.cpp  vec_ref.h
cpp/core/trans/: add_vec.cpp  add_vec.h  fill.cpp  fill.h  identity.cpp  identity.h  linear_trans.cpp  linear_trans.h  pointwise_multiply.cpp  pow.cpp  pow.h
cpp/core/ut/: CMakeLists.txt  context_ut.cpp  matrix_ut.cpp  multi_dim_arr_ut.cpp
cpp/core/vec_tools/: distance.cpp  fill.cpp  fill.h  stats.cpp  stats.h  transform.cpp  transform.h
cpp/data/: CMakeLists.txt  binarized_dataset.cpp  binarized_dataset.h  cifar10_reader.hpp  dataset.h  grid.cpp  grid.h  grid_builder.cpp  grid_builder.h  histgogram.h  histogram.cpp  histogram.h  load_data.cpp  load_data.h
cpp/data/ut/: CMakeLists.txt  data_ut.cpp
cpp/experiments/: CMakeLists.txt  dummy.cpp
cpp/experiments/cifar_nn/: CMakeLists.txt  bce_sigm.h  cifar10_reader.cpp  cifar10_reader.h  cifar10_reader.hpp  em_like_train.h  initializer.h  lenet.cpp  lenet.h  linear_function.h  linear_model.cpp  linear_model.h  linear_train.h  mobile_net_v2.cpp  mobile_net_v2.h  model.cpp  model.h  oblivious_tree_function.h  oblivious_tree_train.cpp  oblivious_tree_train.h  optimizer.h  polynom_model.cpp  polynom_model.h  py_module.cpp  resnet.cpp  resnet.h  simple_conv_net.h  simple_net.cpp  simple_net.h  tensor_pair_dataset.cpp  tensor_pair_dataset.h  transform.cpp  transform.h  tree_train.h  vgg.cpp  vgg.h
cpp/experiments/core/: CMakeLists.txt  bce_sigm.cpp  bce_sigm.h  cross_entropy_loss.cpp  cross_entropy_loss.h  em_like_train.h  layer_norm.h  linear_function.h  linear_train.cpp  loss.cpp  loss.h  model.cpp  model.h  oblivious_tree_function.cpp  oblivious_tree_function.h  oblivious_tree_model.cpp  optimizer.cpp  (+10 more)
cpp/funcs/: CMakeLists.txt  linear.cpp  linear.h  lq.cpp  lq.h
cpp/methods/: CMakeLists.txt  boosting.cpp  boosting.h  boosting_weak_target_factory.cpp  boosting_weak_target_factory.h  greedy_linear_oblivious_trees.cpp  greedy_linear_oblivious_trees.h  greedy_linear_oblivious_trees_v2.cpp  greedy_linear_oblivious_trees_v2.h  greedy_oblivious_tree.cpp  greedy_oblivious_tree.h  listener.h  optimizer.h
cpp/metrics/: CMakeLists.txt  accuracy.cpp  accuracy.h
cpp/models/: CMakeLists.txt  bin_optimized_model.h  ensemble.cpp  ensemble.h  linear_oblivious_tree.cpp  linear_oblivious_tree.h  model.h  oblivious_tree.cpp  oblivious_tree.h
cpp/mx_tools/: CMakeLists.txt  mx_ut.cpp  ops.cpp  ops.h
cpp/nn_trees/: CMakeLists.txt
cpp/optimizers/: adam.cpp  adam.h  batch_optimizer.h  gradient_descent.h  optimizer.h
cpp/src/: convolution.cpp  convolution.h  dataset.cpp  dataset.h  least_squares.cpp  least_squares.h  main.cpp  nd_array.cpp  network.cpp  network.h  optimizer.cpp  py_bindings.cpp  simple_net.cpp
cpp/targets/: CMakeLists.txt  additive_statistics.h  cross_entropy.cpp  cross_entropy.h  l2.cpp  l2.h  linear_l2.cpp  linear_l2.h  linear_l2_stat.cpp  linear_l2_stat.h  stat_based_loss.h  target.h
cpp/tests/: CMakeLists.txt
cpp/trans/: CMakeLists.txt  add_vec.cpp  add_vec.h  compose.h  fill.cpp  fill.h  identity.cpp  linear_trans.cpp  linear_trans.h  pointwise_multiply.cpp  pointwise_multiply.h  pow.cpp
cpp/util/: CMakeLists.txt  array_ref.h  city.cpp  city.h  counter.cpp  counter.h  exception.h  guard.h  io.h  json.h  parallel_executor.cpp  parallel_executor.h  semaphore.cpp  semaphore.h  singleton.h  string.h
cpp/vec_tools/: CMakeLists.txt  distance.cpp  distance.h  sort.cpp  sort.h  stats.cpp  transform.cpp  transform.h
(+197 files in other folders)
